# MLTemplate

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/containers/: Dockerfile
