[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "2024.0.0a1"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = "==3.8"
license = {text = "BSD-3-Clause"}
dynamic = ["version"]

